Fixed login button, blog snippet section bg, stylist section mobile padding
CSS:
blog-snippets section background color now #fff

HTML:
Added menu item Login (remove previous login button in menu)
Inline style for stylist section: fixed unnecessary padding in mobile
version

--- a/css/theme-charcoal.css
+++ b/css/theme-charcoal.css
@@ -3866,7 +3866,7 @@ iframe {
 // 14. Blog
 // --------------------------------------------------*/
 .blog-snippets-1 {
-  background: #f7f7f7 !important;
+  background: #fff !important;
   padding-bottom: 40px;
 }
 .blog-snippet-1 {
